src/test/resources/scripts/language/parser/invalid/cast/badStringCast.sbsc
// parser should error at invalid cast.

str("test");

return false;